darkmatter/lib/tests/snapshots/cutover_reference__ref_block_quote_width_and_left_terminal.snap
---
source: darkmatter/lib/tests/cutover_reference.rs
expression: "render_terminal(&md, 80)"
---
[38;2;100;100;100m▐   [39mA quoted paragraph.
