darkmatter/lib/tests/snapshots/cutover_reference__ref_centered_table_terminal.snap
---
source: darkmatter/lib/tests/cutover_reference.rs
expression: "render_terminal(&md, 80)"
---
                                   ┌───┬───┐
                                   │ A │ B │
                                   ├───┼───┤
                                   │ 1 │ 2 │
                                   └───┴───┘
