darkmatter/lib/tests/snapshots/cutover_reference__ref_list_left_margin_terminal.snap
---
source: darkmatter/lib/tests/cutover_reference.rs
expression: "render_terminal(&md, 80)"
---
    - Item one
    - Item two
